# aqua-ipfs

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  run-tests.yml  rust-toolchain.toml
.circleci/: config.yml
.github/: renovate.json
.github/e2e/: docker-compose.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: e2e.yml  release.yml  run-tests.yml  rust_ci.yml  snapshot.yml  tag.yml  tests.yml
aqua/: README.md  ipfs-api.aqua  ipfs.aqua  ipfs_pure.wasm  package-lock.json  package.json  tsconfig.json
aqua-tests/: .gitignore  README.md  config.py  fluence.yaml  package-lock.json  package.json  test_aqua.py
aqua-tests/.fluence/: project-secrets.yaml
aqua-tests/src/aqua/: main.aqua
aqua/typescript/: index.ts  ipfs-api.ts  tsconfig.json
artifacts/: ipfs_effector_config.json  ipfs_pure_config.json
builtin-package/: blueprint.json  ipfs_effector_config.json  ipfs_pure_config.json  on_start.air  on_start.json  package.sh
effector/: Cargo.toml
effector/src/: main.rs
example/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
example/aqua/: export.aqua
local-network/: docker-compose.yml
pure/: Cargo.toml
pure/src/: main.rs  results.rs
service/: Cargo.toml  Config.toml  build.sh
service/artifacts/: Config.toml  ipfs_effector.wasm  ipfs_pure.wasm  on_start.air  on_start.json
service/distro/: Cargo.toml
service/distro/src/: lib.rs
service/effector/: Cargo.toml  build.rs
service/effector/src/: effector.rs  main.rs
service/effector/tests/: Config.toml  Config_error.toml  Config_put.toml  ipfs  ipfs_put  tests.rs
service/pure/: Cargo.toml  build.rs
service/pure/src/: main.rs  pure.rs
service/pure/tests/: Config.toml  tests.rs
service/types/: Cargo.toml
service/types/src/: lib.rs  results.rs
types/: Cargo.toml
types/src/: lib.rs  results.rs
