[package]
name = "ipfs-pure"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "ipfs_pure"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.10", features = ["logger"] }
log = "0.4.14"
eyre = "0.6.5"
toml = "0.5.8"
serde = "1.0.118"

types = { path = "../types" }
