[package]
name = "aqua-ipfs-distro"
version = "0.5.10" # It should same as aqua-ipfs facade I guess
description = "distribution of aqua ipfs service"
edition = "2021"
build = "build.rs"
include = [ "/src", "/ipfs-service", "build.rs", "Cargo.toml" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"

[build-dependencies]
built = "0.5.2"
