[package]
name = "aqua-ipfs-distro"
version = "0.5.27"
description = "distribution of aqua ipfs service"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
include = [ "/src", "/ipfs-service", "build.rs", "Cargo.toml" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"

[build-dependencies]
built = "0.5.2"
