[package]
name = "ipfs-effector"
version = "0.5.14"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "ipfs_effector"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
multiaddr = { version = "0.11.2", package = "fluence-fork-parity-multiaddr" }
log = "0.4.14"
eyre = "0.6.8"
serde_json = "1.0.64"
itertools = "0.10.5"

types = { path = "../types" }

[dev-dependencies]
marine-rs-sdk-test = "0.10.0"

[build-dependencies]
marine-rs-sdk-test = "0.10.0"
