[package]
name = "ipfs-pure"
version = "0.5.28"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "ipfs_pure"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.10.2", features = ["logger"] }
multiaddr = { version = "0.11.2", package = "fluence-fork-parity-multiaddr" }
log = "0.4.20"
eyre = "0.6.8"
toml = "0.8.8"
serde = "1.0.188"
bs58 = "0.5.0"

types = { path = "../types" }

[dev-dependencies]
marine-rs-sdk-test = "0.12.1"

[build-dependencies]
marine-rs-sdk-test = "0.12.1"
